--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "cookie-parser": "^1.4.7",
     "date-fns-tz": "^3.2.0",
+    "dotenv": "^17.2.3",
     "handlebars": "^4.7.8",
     "mysql2": "^3.15.3",
     "nodemailer": "^7.0.10",
@@ -56,7 +58,8 @@
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
     "@types/bcrypt": "^6.0.0",
-    "@types/express": "^5.0.0",
+    "@types/cookie-parser": "^1.4.10",
+    "@types/express": "^5.0.5",
     "@types/jest": "^30.0.0",
     "@types/node": "^22.10.7",
     "@types/nodemailer": "^7.0.3",
