--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@types/supertest": "^6.0.2",
     "@types/xlsx": "^0.0.35",
     "cloudinary": "^2.8.0",
+    "cross-env": "^7.0.3",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
